# zb0t

./: .gitignore  README.md  stack.yaml  zb0t.cabal  zbit.cabal
app/: Main.hs
src/: HoldEm.hs  Main.hs  Zb0t.hs
src/Zb0t/: Chat.hs  Config.hs  Control.hs  Core.hs  Has.hs  HoldEm.hs  Imports.hs  Irc.hs  Logger.hs  Messager.hs  Monad.hs  Poker.hs  Say.hs  Types.hs
src/Zb0t/Dict/: Words.hs
src/Zb0t/Parse/: Config.hs
src/Zbit/: Config.hs  Core.hs  Imports.hs  Types.hs
test/Test/: Zb0tSpec.hs
test/Test/Zb0t/: ControlSpec.hs
