name: zb0t
version: 0.1.3
-- synopsis:            
-- description:         
-- license:             
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:           
-- category:            
build-type: Simple
-- extra-source-files:  
cabal-version: >= 1.10

executable zb0t
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:    
  build-depends:
      base
    , bytestring
    , network
    , irc
    , mtl
    , transformers
    , safe
    , semigroups
    , containers
    , parsec
    , random
    , async
    , lens
    , stm
    , data-default
    , text
  
  hs-source-dirs: src     
  default-language: Haskell2010
  default-extensions:
    GeneralizedNewtypeDeriving
