name: zbit
version: 0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:           
-- category:            
build-type: Simple
-- extra-source-files:  
cabal-version: >= 1.10

executable zbit
  main-is: Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >= 4.6 && < 4.7,
    network >= 2.4 && < 2.5,
    irc >= 0.6 && < 0.7,
    mtl >= 2.1 && < 2.2,
    transformers >= 0.3 && < 0.4,
    safe >=0.3 && <0.4,
    containers >=0.5 && <0.6
  
  hs-source-dirs: src     
  default-language: Haskell2010
